<resources>
    <string name="app_name">NotifyReminder</string>
    <string name="add_text">Add text</string>
    <string name="do_you_want_delete_notify">Do you want delete notify?</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="repeat_every">Repeat every</string>
    <string name="fixed">Fixed</string>
    <string name="reply">Reply</string>
    <string name="title">Title</string>

    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="hour">Hour</string>
    <string name="minute">Minute</string>

    <string name="save">Save</string>

    <string name="notify_for_reminder">Notify for reminder</string>
    <string name="notify_for_reminder_summary">Notify for remind user anything</string>
    <string name="reply_text">Reply text</string>
    <string name="open_wiki">Open wiki</string>

</resources>